--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a href="https://drive.google.com/uc?export=download&id=1NoJAy6Y55PfgknS1jhdYJ8COZGQM9p9y " class="btn">Download Resume</a>
       </div>
       <div class="home-img">
-        <img src="/portfoliodp.png" alt="" />
+        <img src="https://github.com/MahvishFatimaa/Portfolio/blob/main/portfoliodp.png?raw=true" alt="" />
       </div>
     </section>
 
